<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            style="@style/FormLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alias"/>

        <com.contexthub.notifyme.widget.ClipboardTextView
            style="@style/DeviceInfo"
            android:id="@+id/device_alias"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="Device Alias"/>

        <TextView
            style="@style/FormLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"/>

        <com.contexthub.notifyme.widget.ClipboardTextView
            style="@style/DeviceInfo"
            android:id="@+id/device_tag_1"
            android:text="@string/device_tag_1"/>

        <com.contexthub.notifyme.widget.ClipboardTextView
            style="@style/DeviceInfo"
            android:id="@+id/device_tag_2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/device_tag_2"/>

        <TextView
            style="@style/FormLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"/>

        <com.contexthub.notifyme.widget.ClipboardTextView
            style="@style/DeviceInfo"
            android:id="@+id/device_id"
            android:text="Device Id"/>

        <TextView
            style="@style/FormLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id_will_not_change"/>
    </LinearLayout>

</ScrollView>